bpo-27880: Fixed integer overflow in cPickle when pickle large strings or too many objects.